    DH_OPTIONS (among other).  Thanks to Adrian Bunk and
    Andrew Shadura for reporting the issue.  (Closes: #876689)
  * Dh_Getopt.pm: Gracefully reduce the tool to a no-op when given
    a -p<pkg> and <pkg> is disabled by a Build-Profile.
  * debhelper.7: Document how package selections interact with
    Build-Profiles.  Thanks to Helmut Grohne for the report.
    (Closes: #872745)

  [ Dmitry Shachnev ]
  * qmake.pm: Add basic cross-building support.  (Closes: #877357)

 -- Niels Thykier <niels@thykier.net>  Thu, 21 Sep 2017 19:13:19 +0000

debhelper (10.9) unstable; urgency=medium

  [ Niels Thykier ]
  * debhelper.pod: Fix typo.
  * dh_fixperms: Reset permissions of .scss and .sass files to
    0644.  Thanks to Jonas Smedegaard for the suggestion.
    (Closes: #875586)
  * dh_shlibdeps: Disable unused file(1) tests.
  * dh_strip: In compat 11, rely on file headers/magic to
    determine whether files are ELF binaries worth processing
    instead of using filenames/extensions.  (Closes: #35733)
  * dh_shlibdeps: Ditto.
  * d/control: Bump Standards-Versions to 4.1.0:
    - Bump priority of dh-systemd to "optional".
  * dh_makeshlibs: Avoid gratious warning about a non-existing
    directory, when the packaging directory does not exist.
    (Closes: #626685)
  * dh_gencontrol: Ensure that dbgsym packages do not inherit the
    "Important" field.
  * dh_installinfo: Merge two chmod calls into one to save a
    fork+exec.
  * dh_builddeb: Use -z6 compression for udebs (up from -z1).
    Thanks to Adrian Bunk for the suggestion and Aurelien Jarno
    for confirming it would be fine for d-i.  (Closes: #870201)
  * dh_fixperms: Set the permissions of /usr/lib/nodejs/*/{cli,bin}.js
    to 0755.  Thanks to Pirate Praveen for the report.
    (Closes: #840913)
  * Dh_lib.pm: Expand *_doit and doit to also support a chdir in the
    child process.
  * Dh_Getopt.pm: Validate package names passed via -p and -N to ensure