@@ -11,6 +11,9 @@ debhelper (10.9.1) UNRELEASED; urgency=medium
   * debhelper.7: Document how package selections interact with
     Build-Profiles.  Thanks to Helmut Grohne for the report.
     (Closes: #872745)
+  * dh_installdocs: Validate that the package passed to
+    --doc-main-package are listed in debian/control.
+  * dh_installexamples: Ditto.
 
   [ Dmitry Shachnev ]
   * qmake.pm: Add basic cross-building support.  (Closes: #877357)
